@@ -2,6 +2,7 @@ New in version 1.3.1 (xxx 2010)
  * Work around JWNL bug 3006600 for infinite loop -- 
    https://sourceforge.net/tracker/?func=detail&aid=3006600&group_id=33824&atid=409470
  * Add .n-f and .n-m linkgrammar gender tag recognition
+ * Fix: anaphora resolution failure due to bad head-word identification.
 
 New in version 1.3.0 (15 May 2010)
  * New date relationships for date tagging.
